--- a/TaskFl0w/Info.plist
+++ b/TaskFl0w/Info.plist
@@ -16,6 +16,14 @@
 		<string>CaptainLethargic.ttf</string>
 		<string>catstack.ttf</string>
 		<string>Chokokutai-Regular.ttf</string>
+		<string>Vertiger.otf</string>
+		<string>ElfarNormalG98.ttf</string>
+		<string>Brunothg.otf</string>
+		<string>pershotravneva55-regular.ttf</string>
+		<string>Daneehand Regular Cyr.ttf</string>
+		<string>NovaCut.ttf</string>
+		<string>UnifrakturCook-Bold.ttf</string>
+		<string>Tsarevich old.ttf</string>
 	</array>
 </dict>
 </plist>
