--- a/TaskFl0w/Info.plist
+++ b/TaskFl0w/Info.plist
@@ -20,6 +20,10 @@
 		<string>Daneehand Regular Cyr.ttf</string>
 		<string>NovaCut.ttf</string>
 		<string>UnifrakturCook-Bold.ttf</string>
+		<string>Banana Brick.ttf</string>
+		<string>Cakra-Normal.otf</string>
+		<string>EternalLent.ttf</string>
+		<string>Vetka.otf</string>
 	</array>
 </dict>
 </plist>
