Update .gitignore to exclude Xcode user settings

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,35 @@
-TaskFl0w.xcodeproj/project.xcworkspace/xcuserdata/yan.xcuserdatad/UserInterfaceState.xcuserstate
+# Xcode user settings
+*.xcuserstate
+xcuserdata/
+*.xcuserdatad/
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Xcode
+*.xcodeproj/*
+!*.xcodeproj/project.pbxproj
+!*.xcodeproj/xcshareddata/
+!*.xcodeproj/project.xcworkspace/
+!*.xcodeproj/project.xcworkspace/contents.xcworkspacedata
+*.xcworkspace/xcuserdata/
+
+# Build generated
+build/
+DerivedData/
+
+# Various settings
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
